--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 
+/*
 #app {
     height: 100%;
   }
@@ -12,14 +13,14 @@
     height: 100%;
   }
   
- /* body {
+  body {
     background: #eee;
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
     font-size: 14px;
     color: #000;
     margin: 0;
     padding: 0;
-  }*/
+  }
   
   .swiper {
     width: 100%;
@@ -31,7 +32,7 @@
     font-size: 18px;
     background: #fff;
   
-    /* Center slide text vertically */
+    Center slide text vertically 
     display: flex;
     justify-content: center;
     align-items: center;
@@ -43,4 +44,4 @@
     height: 100%;
     object-fit: cover;
   }
-  
+  */
